Angular.js practice

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="app">
+<html lang="en" ng-app>
     <head>
         <meta charset="UTF-8" />
         <title>Document</title>
@@ -8,5 +8,9 @@
         <script src="angular-route.min.js"></script>
         <script src="app.js"></script>
     </head>
-    <body></body>
+    <body>
+        {{2+2*6}}
+        <br />
+        <input type="text" ng-model="nombre" /> Hola {{nombre}} !
+    </body>
 </html>
