--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="app">
     <head>
         <meta charset="UTF-8" />
         <title>Document</title>
@@ -8,9 +8,9 @@
         <script src="angular-route.min.js"></script>
         <script src="app.js"></script>
     </head>
-    <body>
+    <body ng-controller="controlador">
         {{2+2*6}}
         <br />
-        <input type="text" ng-model="nombre" /> Hola {{nombre}} !
+        <input type="text" ng-model="nombre" /> Hola {{nombre +" "+ apellido}} !
     </body>
 </html>
