--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body ng-controller="controlador as lista">
         {{2+2*6}}
         <br />
-        <!-- <input type="text" ng-model="nombre" />
-        <p>Hola {{nombre +" "+ apellido}} !</p> -->
+        <input type="text" ng-model="nombre" />
+        <p>Hola {{nombre +" "+ apellido}} !</p>
 
         <input type="text" ng-model="lista.nombre" />
         <input type="text" ng-model="lista.precio" />
