--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body ng-controller="controlador as lista">
         <div id="menu">
             <ul>
-                <li><a href="#!">Cajero</a></li>
-                <li><a href="#!productos">Productos</a></li>
+                <li><a href="#/!">Cajero</a></li>
+                <li><a href="#/!productos">Productos</a></li>
             </ul>
         </div>
 
@@ -43,5 +43,7 @@
             ng-repeat="producto in lista.productos"
             value="{{producto.nombre}}"
         ></li>
+
+        <div ng-view></div>
     </body>
 </html>
